# iot-anomaly-detector-timeseries

./: .automation-scope.yaml  .coverage  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  API_SECURITY.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  COMPLIANCE.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_REPORT.md  DEVELOPMENT_PLAN.md  Dockerfile  FINAL_AUTONOMOUS_EXECUTION_SUMMARY.md  LICENSE  Makefile  PROJECT_CHARTER.md  QUANTUM_BREAKTHROUGH_IMPLEMENTATION_REPORT.md  README.md  README_QUANTUM_TASK_PLANNER.md  SBOM.md  SDLC_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SPRINT_BOARD.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_GENERATIONS_1_3_COMPLETE.md  (+42 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: BENCHMARKING_CONFIG.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  dependency-update.yml  monitoring.yml  performance.yml  release.yml  security.yml
.terragon/: AUTONOMOUS_BACKLOG.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  METRICS_DASHBOARD.md  autonomous_runner.py  autonomous_value_engine.py  metrics_tracker.py  simple_value_discovery.py  value-config.yaml  value-items.json  value-metrics.json
benchmarks/: performance_benchmarks.py
config/: development.yaml  grafana-dashboard.json  production.yaml
config/logging/: logback.xml
config/monitoring/: alert_rules.yml  prometheus.yml
data/raw/: sensor_data.csv  sensor_labels.csv
deploy/: Dockerfile  healthcheck.py  production_deployment.yaml
deploy/scripts/: start.sh
deployment/: Dockerfile.pipeline  README.md  deployment-config.json  docker-compose.production.yml  docker-compose.yml  production.env  production_pipeline_deployment.yaml
deployment/configs/: development.env  production.env  staging.env
deployment/dockerfiles/: Dockerfile.inference_engine  Dockerfile.monitoring  Dockerfile.web_api
deployment/k8s/: configmap.yaml  deployment-api.yaml  deployment-inference.yaml  deployment-monitoring.yaml  hpa.yaml  ingress-api.yaml  namespace.yaml  service-api.yaml  service-inference.yaml  service-monitoring.yaml
deployment/scripts/: build.sh  cleanup.sh  deploy.sh  monitor.sh
docs/: API_REFERENCE.md  AUTONOMOUS_SDLC_INTEGRATION.md  CI-CD-SETUP.md  COMPLIANCE_FRAMEWORK.md  DEPENDABOT_AUTO_MERGE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  GITHUB_ACTIONS_SETUP_REQUIRED.md  INCIDENT_RESPONSE.md  MANUAL_WORKFLOW_SETUP.md  PERFORMANCE_OPTIMIZATION.md  ROADMAP.md  SDLC-COMPREHENSIVE-IMPLEMENTATION.md  SDLC-IMPLEMENTATION-SUMMARY.md  SETUP_REQUIRED.md
docs/adr/: 001-autoencoder-architecture.md  002-service-architecture.md  003-data-persistence-strategy.md
docs/github-workflows-ready/: README.md
docs/github-workflows-setup/: README.md  ci.yml  release.yml  security.yml
docs/runbooks/: INCIDENT_RESPONSE.md
docs/status/: autonomous_completion_report.md  autonomous_cycle_complete.md  execution_metrics.json
docs/workflows/: CI_CD_SETUP.md  README.md
docs/workflows-templates/: dependency-update.yml  release.yml
examples/: quantum_ml_pipeline_example.py
locales/: de.json  en.json  es.json  fr.json  ja.json  zh-CN.json
notebooks/: example.ipynb
quality_env/: pyvenv.cfg
scripts/: setup.sh  test.sh
src/: adaptive_cache.py  adaptive_edge_computing_orchestrator.py  adaptive_learning_system.py  adaptive_multi_modal_detector.py  adaptive_neural_plasticity_networks.py  adaptive_real_time_processor.py  advanced_autoencoder_cli.py  advanced_meta_learning_orchestrator.py  advanced_security_framework.py  anomaly_detector.py  api_gateway.py  architecture_manager.py  autoencoder_model.py  autonomous_performance_optimization_engine.py  autonomous_quality_assurance_system.py  autoscaling_manager.py  basic_pipeline.py  breakthrough_quantum_neuromorphic_fusion.py  cache_manager_cli.py  caching_strategy.py  circuit_breaker.py  comprehensive_monitoring.py  config.py  data_drift_detector.py  data_preprocessor.py  data_validator.py  distributed_anomaly_detection.py  drift_monitoring_cli.py  edge_anomaly_detector.py  enterprise_security_framework.py  evaluate_model.py  explainability_cli.py  federated_anomaly_learning.py  flexible_autoencoder.py  generate_data.py  generation_1_autonomous_core.py  generation_5_adaptive_consciousness.py  generation_6_singularity_protocols.py  generation_7_cosmic_intelligence.py  global_deployment_manager.py  (+49 more)
tests/: conftest.py  sprint_acceptance_criteria.json  test_advanced_architectures.py  test_advanced_features.py  test_advanced_generation_4_components.py  test_advanced_multi_modal_system.py  test_anomaly_detector.py  test_anomaly_detector_performance.py  test_architecture_manager.py  test_autoencoder_model.py  test_basic_functionality.py  test_breakthrough_implementations.py  test_breakthrough_implementations_minimal.py  test_caching_strategy.py  test_config.py  test_data_drift_detection.py  test_data_preprocessor.py  test_data_validator.py  test_evaluate_model.py  test_flexible_autoencoder.py  test_generate_data.py  test_generation_1_2_3_integration.py  test_generation_4_7_breakthrough_systems.py  test_generation_4_breakthrough_systems.py  test_integration_pipeline.py  test_logging_config.py  test_memory_efficient_windows.py  test_model_explainability.py  test_model_manager.py  test_model_metadata.py  test_model_serving_api.py  test_new_components.py  test_performance_monitoring.py  test_pipeline_generations.py  test_quantum_breakthrough_systems.py  test_quantum_task_planning.py  test_readme_dev_setup.py  test_readme_integration_doc.py  test_run_integration_via_pytest.py  test_security_hardening.py  (+6 more)
(+29 files in other folders)
